--- a/week 1/additem.html
+++ b/week 1/additem.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!--Michael Eaton -->
-<!--Project 4 web app-->
-<!--1302-->
+<!--Miu week 1-->
+<!--1303-->
     <html>
         <head>
             <meta charset="utf-8" />
