Added a browser button for the five fields. Fixed some css in indexStyles.css.

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -18,44 +18,24 @@
            		<a href="additem.html"><img src="img/CTA.png"></a>
            </nav>
            <form action="#" method="post" id="indexForm">
-           		<label for="searchF"><input type="text" id="searchF" autofocus="Search"/></label>
-           		<input type="button" value="Search" id="searchBut"/>
-           
+           			<label for="searchF"><input type="text" id="searchF" placeholder="Search"/></label>
+           			<input type="button" value="Search" id="searchBut"/>
            <h2>Browse</h2>
            <ol id="browse">
-           		<li><label for="genre" id="genre">Genre</label>
-           			<ol id="genType">
-           				<li><label for="advent" id="advent">Adventure</label></li>
-           				<li><label for="action" id="action">Action</label></li>
-           				<li><label for="rpg" id="rpg">RPG</label></li>
-           			</ol>
+           		<li>
+           		<a href="#"><img src="img/browserButton.png" id="genre"></a>
            		</li>
-           		<li><label for="console" id="console">Console</label>
-           			<ol id="conType">
-           				<li><label for="ps3" id="ps3">PlayStation 3</label></li>
-           				<li><label for="xbox360" id="xbox360">Xbox 360</label></li>
-           				<li><label for="wii" id="wii">Wii</label></li>
-           			</ol>
+           		<li>
+           			<a href="#"><img src="img/browserButton.png" id="console"></a>          
            		</li>
-           		<li><label for="enjoyablity" id="enjoyability">Enjoyability</label>
-           			<ol id="enjoyType">
-           				<li><label for="yes" id="yes">Yes</label></li>
-           				<li><label for="no" id="no">no</label></li>
-           			</ol>
+           		<li>
+           			<a href="#"><img src="img/browserButton.png" id="enjoy"></a>          
            		</li>
-           		<li><label for="beaten" id="beaten">Beaten</label>
-           			<ol id="beatType">
-           				<li><label for="yes" id="yes">Yes</label></li>
-           				<li><label for="no" id="no">No</label></li>
-           			</ol>
+           		<li>
+           			<a href="#"><img src="img/browserButton.png" id="beat"></a>
            		</li>
-           		<li><label for="rating" id="rating">Rating</label>
-           			<ol id="rateType">
-           				<li><label for="one" id="one">1</label></li>
-           				<li><label for="two" id="two">2</label></li>
-           				<li><label for="three" id="three">3</label></li>
-           				<li><label for="four" id="four">4</label></li>
-           				<li><label for="five" id="five">5</label></li>           			</ol>
+           		<li>
+	           		<a href="#"><img src="img/browserButton.png" id="rate"></a>
            		</li>
            </ol>
 	       </form>
@@ -63,5 +43,4 @@
 	       <script src="js/json.js" type="text/javascript"></script>
 	       <script src="js/search.js" type="text/javascript"></script>
         </body>
-        
     </html>
