Added new browse buttons with names on them.

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -23,19 +23,19 @@
            <h2>Browse</h2>
            <ol id="browse">
            		<li>
-           		<a href="#"><img src="img/browserButton.png" id="genre"></a>
+           		<a href="#"><img src="img/browserGen.png" id="genre"></a>
            		</li>
            		<li>
-           			<a href="#"><img src="img/browserButton.png" id="console"></a>          
+           			<a href="#"><img src="img/browserCon.png" id="console"></a>          
            		</li>
            		<li>
-           			<a href="#"><img src="img/browserButton.png" id="enjoy"></a>          
+           			<a href="#"><img src="img/browserEnjoy.png" id="enjoy"></a>          
            		</li>
            		<li>
-           			<a href="#"><img src="img/browserButton.png" id="beat"></a>
+           			<a href="#"><img src="img/browserBeat.png" id="beat"></a>
            		</li>
            		<li>
-	           		<a href="#"><img src="img/browserButton.png" id="rate"></a>
+	           		<a href="#"><img src="img/browserRate.png" id="rate"></a>
            		</li>
            </ol>
 	       </form>
