Added images to the CTA.png.

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -15,12 +15,12 @@
         <body>
           	
            <nav> 
-           		<a href="additem.html"><img src="img/CTA.png"></a>
+           		<a href="additem.html"><img src="img/CTA2.png"></a>
            </nav>
            <form action="#" method="post" id="indexForm">
            			<label for="searchF"><input type="text" id="searchF" placeholder="Search"/></label>
            			<input type="button" value="Search" id="searchBut"/>
-           <h2>Browse</h2>
+           <h2>Browse by:</h2>
            <ol id="browse">
            		<li>
            		<a href="#"><img src="img/browserGen.png" id="genre"></a>
