Added a title for the search area.

--- a/week 1/index.html
+++ b/week 1/index.html
@@ -19,6 +19,7 @@
            </nav>
            <form action="#" method="post" id="indexForm">
            		<div id="searchfield">
+           		<h2>Search for an item</h2>
            			<label for="searchF"><input type="text" id="searchF" placeholder="Search" /></label>
            			<input type="button" value="Search" id="searchBut"/>
            		</div>
