--- a/week 1/additem.html
+++ b/week 1/additem.html
@@ -10,7 +10,7 @@
             <meta name="robots" content="index, follow" />
             <meta name="viewport" content="user-scalable=no, width=device-width" />
             <link href="css/styles.css" rel="stylesheet" type="text/css"/>
-            <title>Game Organizer</title>
+            <title>Game Library Organizer</title>
         </head>
         <body>
             <h1 id="title">Organize your Game Library</h1>
