--- a/week 1/index.html
+++ b/week 1/index.html
@@ -10,7 +10,7 @@
             <meta name="robots" content="index, follow" />
             <meta name="viewport" content="user-scalable=no, width=device-width" />
             <link href="css/indexStyles.css" rel="stylesheet" type="text/css"/>
-            <title>Game Library</title>
+            <title>Game Library Organizer</title>
        </head> 
         <body>
           	
