--- a/week 2/Gold/index.html
+++ b/week 2/Gold/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
 	<div data-role="page" id="index">
-		<div data-role="header">
+		<div data-role="header"  data-position="fixed">
 			<h1>Game Browser</h1>
 		</div>
 		
@@ -43,22 +43,35 @@
 			<a href="#"><img src="images/browserRate.png" id="rate"></a>
 			</form>
 		</div>
-		
-	</div>
-	<div data-role="page" id="addGame" data-add-back-btn="true">
-		<div data-role="header" >
-			<h1>Input Game</h1>
+		<div data-role="footer"  data-position="fixed">
+			<div data-role="navbar" >
+				<ul>
+					<li><a href="#">One</a></li>
+					<li><a href="#">Two</a></li>
+					<li><a href="#">Three</a></li>
+	            </ul>
+	        </div>
 		</div>
 		
-		
-		
-		
-		
-		
-		
-		
-		
-		
+	</div>
+	<div data-role="page" id="addGame" data-add-back-btn="true" >
+		<div data-role="header" data-position="fixed">
+			<h1>Input Game</h1>
+			
+			
+		</div>
+		<div data-role="content">
+	
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar" >
+				<ul>
+					<li><a href="#">One</a></li>
+					<li><a href="#">Two</a></li>
+					<li><a href="#">Three</a></li>
+	            </ul>
+	        </div>
+		</div>
 		
 	</div>
 
