Added search filter

--- a/week 2/Gold/index.html
+++ b/week 2/Gold/index.html
@@ -29,13 +29,9 @@
 		
 		<div data-role="content">
 			<p><a href="additem.html" data-ajax="false"><img src="images/CTA2.png"></a></p>
-			<label for="search">Search:</label>
-			
-		
-		
 			<h2>Browse By:</h2>
-			<div id="browseBars"
-				<ul data-role="listview" data-inset="true" data-theme="b">
+			<div id="browseBars">
+				<ul data-role="listview" data-inset="true" data-theme="b" data-filter="true">
 					<li><a href="#coming">Genre<span class="ui-li-count">6</span></a></li>
 					<li><a href="#coming">Console<span class="ui-li-count">5</span></a></li>
 					<li><a href="#coming">Enjoyable<span class="ui-li-count">2</span></a></li>
@@ -47,9 +43,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="https://github.com/b02197/Miu/tree/gh-pages/week%202/Gold">GitHub Repo</a></li>
-					<li><a href="#">filler</a></li>
-					<li><a href="#">filler</a></li>
+					<li><a href="#index">Home</a></li>
+					<li><a href="#">News Steam</a></li>
+					<li><a href="#">About</a></li>
 				</ul>
 			</div>
 		</div>	
@@ -67,9 +63,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="https://github.com/b02197/Miu/tree/gh-pages/week%202/Gold">GitHub Repo</a></li>
-					<li><a href="#">fuller</a></li>
-					<li><a href="#">fuller</a></li>
+					<li><a href="#index">Home</a></li>
+					<li><a href="#">News Steam</a></li>
+					<li><a href="#">About</a></li>
 				</ul>
 			</div>
 		</div>
