--- a/week 2/Bronze/index.html
+++ b/week 2/Bronze/index.html
@@ -15,17 +15,69 @@
 	<meta http-equiv="cleartype" content="on">
 	
 	<!-- StyleSheets under here -->
-	
-	
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.css" />
+	<link rel="stylesheet" href="css/style.css"/>
 	<!-- JavaScript is normally at the end of the body, except for Modernizr which enables HTML5 elements & feature detects -->
 	<script src="js/libs/modernizr.custom.min.js"></script>
 
 </head>
 <body>
-
+	<div data-role="page" id="index">
+		<div data-role="header" data-position="fixed">
+			<h1>Game Browser</h1>
+		</div>
+		
+		<div data-role="content">
+			<p><a href="additem.html" data-ajax="false"><img src="images/CTA2.png"></a></p>
+			<label for="search">Search:</label>
+			
+		
+		
+			<h2>Browse By:</h2>
+			<div id="browseBars"
+				<ul data-role="listview" data-inset="true" data-theme="b">
+					<li><a href="#coming">Genre<span class="ui-li-count">6</span></a></li>
+					<li><a href="#coming">Console<span class="ui-li-count">5</span></a></li>
+					<li><a href="#coming">Enjoyable<span class="ui-li-count">2</span></a></li>
+					<li><a href="#coming">Beaten<span class="ui-li-count">2</span></a></li>
+					<li><a href="#coming">Rate<span class="ui-li-count">5</span></a></li>
+				</ul>
+			</div>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#index">Home</a></li>
+					<li><a href="#">News Steam</a></li>
+					<li><a href="#">About</a></li>
+				</ul>
+			</div>
+		</div>	
+	</div>
 	
-
-	<!-- JavaScript under here -->
-
+	<div data-role="page" id="coming">
+		<div data-role="header" data-position="fixed">
+			<h1>Coming Soon</h1>
+			
+		</div>
+		<div data-role="content">
+			<h2>Coming Soon</h2>
+			<p>This data will been entered as soon as possible.</p>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#index">Home</a></li>
+					<li><a href="#">News Steam</a></li>
+					<li><a href="#">About</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </body>
+	<!-- JavaScript under here -->
+	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script></body>
+	<script src="js/json.js" type="text/javascript"></script>
+	<script src="js/main.js" type="text/javascript"></script>
 </html>
