Added Thumbnail grid to the console one-window drill down

--- a/week 2/Gold/index.html
+++ b/week 2/Gold/index.html
@@ -4,7 +4,7 @@
 
 	<meta charset="utf-8">
 	
-	<title>Mobile Site Template</title>
+	<title>Game Organizer</title>
 	
 	<!--  Mobile viewport optimized: j.mp/bplateviewport -->
 	<meta name="HandheldFriendly" content="True">
@@ -99,15 +99,13 @@
 		<h1>Console Groups</h1>
 		</div>
 		<div data-role="content">
-			<div id="conBtn">
-				<ul data-role="listview" data-inset="true" data-theme="b">
-					<li><a href="#coming">PS3</a></li>
-					<li><a href="#coming">Xbox360</a></li>
-					<li><a href="#coming">Wii</a></li>
-					<li><a href="#coming">PSV</a></li>
-					<li><a href="#coming">PC</a></li>
-					<li><a href="#coming">3DS</a></li>
-				</ul>
+			<div class="ui-grid-a" id="conBtn">
+				<div class="ui-block-a"><div class="ui-bar ui-bar-b" style="height:140px"><center><img src="images/PS3.png"><p><a href="#coming">PS3 Games</a></p></center></div></div>
+				<div class="ui-block-b"><div class="ui-bar ui-bar-b" style="height:140px"><center><img src="images/Xbox360.png"><p><a href="#coming">Xbox360 Games</a></p></center></div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-b" style="height:140px"><center><img src="images/Wii.png"><p><a href="#coming">Wii Games</a></p></center></div></div>
+				<div class="ui-block-b"><div class="ui-bar ui-bar-b" style="height:140px"><center><img src="images/PSV.png"><p><a href="#coming">PSV Games</a></p></center></div></div>
+				<div class="ui-block-a"><div class="ui-bar ui-bar-b" style="height:140px"><center><img src="images/PC.png"><p><a href="#coming">PC Games</a></p></center></div></div>
+				<div class="ui-block-b"><div class="ui-bar ui-bar-b" style="height:140px"><center><img src="images/3DS.png"><p><a href="#coming">3DS Games</a></p></center></div></div>
 			</div>
 		</div>
 		<div data-role="footer" data-position="fixed">
