Added thumbnail and text to the console browse list inlay on bronze app

--- a/week 2/Bronze/index.html
+++ b/week 2/Bronze/index.html
@@ -26,56 +26,94 @@
 		<div data-role="header" data-position="fixed">
 			<h1>Game Browser</h1>
 		</div>
-		<div data-role="content">
+		<div data-role="content" data-inset="true">
 			<p><a href="additem.html" data-ajax="false"><img src="images/CTA2.png"></a></p>
 			<h2>Browse By:</h2>
-			<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="false">
-			    <h3>Genre</h3>
-			    <ul data-role="listview">
-			        <li><a href="#coming">Action</a></li>
-			        <li><a href="#coming">Adventure</a></li>
-			        <li><a href="#coming">RPG</a></li>
-			        <li><a href="#coming">Shooter</a></li>
-			        <li><a href="#coming">Platformer</a></li>
-			        <li><a href="#coming">Racing</a></li>
-			    </ul>
+			<div data-role="collapsible-set" >
+				<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="true">
+				
+				    <h3>Genre</h3>
+				    <ul data-role="listview" data-filter="true" data-inset="true">
+				        <li><a href="#coming">Action</a></li>
+				        <li><a href="#coming">Adventure</a></li>
+				        <li><a href="#coming">RPG</a></li>
+				        <li><a href="#coming">Shooter</a></li>
+				        <li><a href="#coming">Platformer</a></li>
+				        <li><a href="#coming">Racing</a></li>
+				    </ul>
+				</div>
+				<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="true">
+				    <h3>Console</h3>
+				    <ul data-role="listview" data-filter="true" data-inset="true">
+				        <li>
+				        	<a href="#coming">
+				        		<img src="images/PS3.png">
+				        		<h3>PS3</h3>
+				        		<p>Browse your PS3 games.</p>
+				        	</a>	
+				        </li>
+				        <li>
+				        	<a href="#coming">
+				        		<img src="images/Xbox360.png">
+				        		<h3>Xbox 360</h3>
+				        		<p>Browse your Xbox 360 games.</p>
+				        	</a>	
+				        </li>
+				        <li>
+				        	<a href="#coming">
+				        		<img src="images/Wii.png">
+				        		<h3>Wii</h3>
+				        		<p>Browse your Wii games.</p>
+				        	</a>	
+				        </li>
+				        <li>
+				        	<a href="#coming">
+				        		<img src="images/PSV.png">
+				        		<h3>PSV</h3>
+				        		<p>Browse your PSV games.</p>
+				        	</a>	
+				        </li>
+				        <li>
+				        	<a href="#coming">
+				        		<img src="images/PC.png">
+				        		<h3>PC</h3>
+				        		<p>Browse your PC games.</p>
+				        	</a>
+				       	</li>
+				        <li>
+				        	<a href="#coming">
+				        		<img src="images/3DS.png">
+				        		<h3>3DS</h3>
+				        		<p>Browse your 3DS games.</p>
+				        	</a>	
+				        </li>
+				    </ul>
+				</div>
+				<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="true">
+				    <h3>Enjoyable</h3>
+				    <ul data-role="listview" data-filter="true" data-inset="true">
+				        <li><a href="#coming">Yes</a></li>
+				        <li><a href="#coming">No</a></li>
+				    </ul>
+				</div>
+				<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="true">
+				    <h3>Beaten</h3>
+				    <ul data-role="listview" data-filter="true" data-inset="true">
+				        <li><a href="#coming">Yes</a></li>
+				        <li><a href="#coming">No</a></li>
+				    </ul>
+				</div>
+				<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="true">
+				    <h3>Rating</h3>
+				    <ul data-role="listview" data-filter="true" data-inset="true">
+				        <li><a href="#coming">1 Star</a></li>
+				        <li><a href="#coming">2 Star</a></li>
+				        <li><a href="#coming">3 Star</a></li>
+				        <li><a href="#coming">4 Star</a></li>
+				        <li><a href="#coming">5 Star</a></li>
+				    </ul>
+				</div>
 			</div>
-			<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="false">
-			    <h3>Console</h3>
-			    <ul data-role="listview">
-			        <li><a href="#coming">PS3</a></li>
-			        <li><a href="#coming">Xbox360</a></li>
-			        <li><a href="#coming">Wii</a></li>
-			        <li><a href="#coming">PSV</a></li>
-			        <li><a href="#coming">PC</a></li>
-			        <li><a href="#coming">3DS</a></li>
-			    </ul>
-			</div>
-			<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="false">
-			    <h3>Enjoyable</h3>
-			    <ul data-role="listview">
-			        <li><a href="#coming">Yes</a></li>
-			        <li><a href="#coming">No</a></li>
-			    </ul>
-			</div>
-			<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="false">
-			    <h3>Beaten</h3>
-			    <ul data-role="listview">
-			        <li><a href="#coming">Yes</a></li>
-			        <li><a href="#coming">No</a></li>
-			    </ul>
-			</div>
-			<div data-role="collapsible" data-theme="b" data-content-theme="c" data-inset="false">
-			    <h3>Rating</h3>
-			    <ul data-role="listview">
-			        <li><a href="#coming">1 Star</a></li>
-			        <li><a href="#coming">2 Star</a></li>
-			        <li><a href="#coming">3 Star</a></li>
-			        <li><a href="#coming">4 Star</a></li>
-			        <li><a href="#coming">5 Star</a></li>
-			    </ul>
-			</div>
-		</div>
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
