Added about page on both gold and bronze

--- a/week 2/Gold/index.html
+++ b/week 2/Gold/index.html
@@ -27,7 +27,7 @@
 			<h1>Game Browser</h1>
 		</div>
 		<div data-role="content">
-			<p><a href="additem.html" data-ajax="false"><img src="images/CTA2.png"></a></p>
+			<p><a href="additem.html" data-ajax="false"><img src="images/CTA2.png" style="width:280px"></a></p>
 			<h2>Browse By:</h2>
 			<div id="browseBars">
 				<ul data-role="listview" data-inset="true" data-theme="b" data-filter="true">
@@ -44,7 +44,7 @@
 				<ul>
 					<li><a href="#index">Home</a></li>
 					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</div>
 		</div>	
@@ -63,7 +63,7 @@
 				<ul>
 					<li><a href="#index">Home</a></li>
 					<li><a href="newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -89,7 +89,7 @@
 				<ul>
 					<li><a href="#index">Home</a></li>
 					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -113,7 +113,7 @@
 				<ul>
 					<li><a href="#index">Home</a></li>
 					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -157,7 +157,7 @@
 				<ul>
 					<li><a href="#index">Home</a></li>
 					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -182,7 +182,7 @@
 				<ul>
 					<li><a href="#index">Home</a></li>
 					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -192,19 +192,51 @@
 			<h1>News Stream</h1>
 		</div>
 		<div data-role="content">
-			
+			<p>2013-03-14: Added a PS3 game to the library.</p>
+			<p>2013-03-10: Added a PC game the the library.</p>
+			<p>2013-02-28: Added a PSV game to the library.</p>
+			<p>2013-02-10: Added a PS3 game to the library.</p>
+			<p>2013-01-18: Added a Xbox 360 game to the library.</p>
+			<p>2013-01-03: Added a 3DS game to the library.</p>
+			<p>2012-12-25: Added a Wii game to the library.</p>
+			<p>2012-12-25: Added a Wii game to the library.</p>
+			<p>2012-12-25: Added a PSV game to the library.</p>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#index">Home</a></li>
 					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#about">About</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>	
-	
+	<div data-role="page" id="about">
+		<div data-role="header" data-position="fixed">
+			<h1>ABOUT</h1>
+		</div>
+		<div data-role="content">
+				<h2>About this app</h2>
+			<p> I made this app to organize my game library. It isn't complete yet but will be one day.</p>
+			<p>I put my required thumbnail on my Gold app under the console browse by button. My required thumbnail with text is on the Bronze app under console as well.</p>
+			<h2>A little about Me.</h2>
+			<p> My name is Michael Eaton. I live in Michigan. I have been working with computers for about 18 years now. I am in the Mobile Development course at Full Sail University. I took this course to learn about making Apps for mobile devices. I believe that mobile devices are going to be in use more and more within the next few years. This will open up more jobs in the mobile field and hopefuly landing me a good job.</p>
+			<a href="https://github.com/b02197/Miu">Git Hub Repo</a>  <br>
+			<a href="bronze/index.html" data-ajax="false">Bronze App</a>    <br>
+			<a href="http://b02197.github.com/Miu/week%202/Gold/index.html">Gold App gh-pages</a> <br>
+			<a href="http://b02197.github.com/Miu/week%202/Bronze/index.html">Bronze App gh-pages</a>  <br>
+		</div>
+		<div data-role="footer" data-position="fixed">
+			<div data-role="navbar">
+				<ul>
+					<li><a href="#index">Home</a></li>
+					<li><a href="#newsStream">News Steam</a></li>
+					<li><a href="#about">About</a></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 		
 </body>
 	<!-- JavaScript under here -->
