--- a/week 2/Gold/index.html
+++ b/week 2/Gold/index.html
@@ -42,9 +42,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>	
@@ -61,9 +61,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -87,9 +87,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -111,9 +111,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -133,9 +133,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -155,9 +155,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -180,9 +180,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -205,9 +205,9 @@
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
@@ -223,16 +223,14 @@
 			<h2>A little about Me.</h2>
 			<p> My name is Michael Eaton. I live in Michigan. I have been working with computers for about 18 years now. I am in the Mobile Development course at Full Sail University. I took this course to learn about making Apps for mobile devices. I believe that mobile devices are going to be in use more and more within the next few years. This will open up more jobs in the mobile field and hopefuly landing me a good job.</p>
 			<a href="https://github.com/b02197/Miu">Git Hub Repo</a>  <br>
-			<a href="bronze/index.html" data-ajax="false">Bronze App</a>    <br>
-			<a href="http://b02197.github.com/Miu/week%202/Gold/index.html">Gold App gh-pages</a> <br>
-			<a href="http://b02197.github.com/Miu/week%202/Bronze/index.html">Bronze App gh-pages</a>  <br>
+			<a href="http://b02197.github.com/Miu/week%202/Bronze/index.html">Bronze App</a>  <br>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index">Home</a></li>
-					<li><a href="#newsStream">News Steam</a></li>
-					<li><a href="#about">About</a></li>
+					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
