Added navbar, two drop down fields and a textbox

--- a/week 3/Gold/index.html
+++ b/week 3/Gold/index.html
@@ -33,7 +33,7 @@ term 1303-->
 			<h1>Game Browser</h1>
 		</div>
 		<div data-role="content">
-			<p><a href="additem.html" data-ajax="false"><img src="images/CTA2.png" style="width:280px"></a></p>
+			<p><a href="addItem.html" data-ajax="false"><img src="images/CTA2.png" style="width:280px"></a></p>
 			<h2>Browse By:</h2>
 			<div id="browseBars">
 				<ul data-role="listview" data-inset="true" data-theme="b" data-filter="true">
@@ -68,7 +68,7 @@ term 1303-->
 			<div data-role="navbar">
 				<ul>
 					<li><a href="#index" data-icon="home">Home</a></li>
-					<li><a href="newsStream" data-icon="bars">News Steam</a></li>
+					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
 					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
