--- a/week 3/Gold/additem.html
+++ b/week 3/Gold/additem.html
@@ -4,7 +4,7 @@
 
 	<meta charset="utf-8">
 	
-	<title>Mobile Site Template</title>
+	<title>Game Organizer</title>
 	
 	<!--  Mobile viewport optimized: j.mp/bplateviewport -->
 	<meta name="HandheldFriendly" content="True">
@@ -25,52 +25,130 @@
 </head>
 <body>
 	<div data-role="page" id="dataField">
-		<div data-role="header" data-postion="fixed">
-		
-		</div>
-		<div data-role="content">
-			
-		</div>
-		<div data-role="footer" data-postion="fixed">
-			<div data-role="navbar">
-				<ul>
-					<li><a href="#index" data-icon="home">Home</a></li>
-					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
-					<li><a href="#about" data-icon="info">About</a></li>
-				</ul>
-			</div>
-		</div>
-		
-		<div data-role="page" id="about">
 		<div data-role="header" data-position="fixed">
-			<h1>ABOUT</h1>
+		
 		</div>
 		<div data-role="content">
-				<h2>About this app</h2>
-			<p> I made this app to organize my game library. It isn't complete yet but will be one day.</p>
-			<p>I put my required thumbnail on my Gold app under the console browse by button. My required thumbnail 				with text is on the Bronze app under console as well.</p>
-			<h2>A little about Me.</h2>
-			<p> My name is Michael Eaton. I live in Michigan. I have been working with computers for about 18 years 				now. I am in the Mobile Development course at Full Sail University. I took this course to learn 					about making Apps for mobile devices. I believe that mobile devices are going to be in use more and 				more within the next few years. This will open up more jobs in the mobile field and hopefuly landing 				me a good job.</p>
-			<a href="https://github.com/b02197/Miu">Git Hub Repo</a>  <br>
-			<a href="http://b02197.github.com/Miu/week%202/Bronze/index.html">Bronze App</a>  <br>
+			<form>
+				<div data-role"fieldcontain">
+					<label for="genSel">Game Genre</label>
+					<select name="genSel" id="genSel">
+						<optgroup label="--Choose a Genre--" >
+							<option value="act">Action</option>
+							<option value="adv">Adventure</option>
+							<option value="rpg">RPG</option>
+							<option value="shot">Shooter</option>
+							<option value="plat">Platformer</option>
+							<option value="race">Racing</option>
+						</optgroup>
+					</select>
+				</div>
+			</form>
+			<form>
+				<div data-role="fieldcontain">
+					<label for="title">Game Title</label>
+					<input type="text" name="title" id="title" value="">
+				</div>
+			</form>
+			<form>
+				<div data-role"fieldcontain">
+					<label for="conSel">Game Console</label>
+					<select name="conSel" id="conSel">
+						<optgroup label="--Choose a Console--">
+							<option value="ps3">PS3</option>
+							<option value="xbox">Xbox360</option>
+							<option value="wii">Wii</option>
+							<option value="psv">PSV</option>
+							<option value="pc">PC</option>
+							<option value="3ds">3DS</option>
+						</optgroup>
+					</select>
+				</div>
+			</form>
 		</div>
 		<div data-role="footer" data-position="fixed">
 			<div data-role="navbar">
 				<ul>
-					<li><a href="#index" data-icon="home">Home</a></li>
+					<li><a href="index.html" data-icon="home" data-ajax="false">Home</a></li>
 					<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
 					<li><a href="#about" data-icon="info">About</a></li>
 				</ul>
 			</div>
 		</div>
 	</div>
+		<div data-role="page" id="about">
+			<div data-role="header" data-position="fixed">
+				<h1>ABOUT</h1>
+			</div>
+			<div data-role="content">
+				<h2>About this app</h2>
+				<p> I made this app to organize my game library. It isn't complete yet but will be one day.</p>
+				<p>I put my required thumbnail on my Gold app under the console browse by button. My required 						thumbnail with text is on the Bronze app under console as well.</p>
+				<h2>A little about Me.</h2>
+				<p> My name is Michael Eaton. I live in Michigan. I have been working with computers for about 18 					years now. I am in the Mobile Development course at Full Sail University. I took this course to 					learn about making Apps for mobile devices. I believe that mobile devices are going to be in use 					more and more within the next few years. This will open up more jobs in the mobile field and 						hopefuly landing me a good job.</p>
+				<a href="https://github.com/b02197/Miu">Git Hub Repo</a>  <br>
+				<a href="http://b02197.github.com/Miu/week%202/Bronze/index.html">Bronze App</a>  <br>
+			</div>
+			<div data-role="footer" data-position="fixed">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#index" data-icon="home">Home</a></li>
+						<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+						<li><a href="#about" data-icon="info">About</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div data-role="page" id="coming">
+			<div data-role="header" data-position="fixed">
+				<h1>Coming Soon</h1>
+			</div>
+			<div data-role="content">
+				<h2>Coming Soon</h2>
+				<p>This data will been entered as soon as possible.</p>
+			</div>
+			<div data-role="footer" data-position="fixed">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#index" data-icon="home">Home</a></li>
+						<li><a href="newsStream" data-icon="bars">News Steam</a></li>
+						<li><a href="#about" data-icon="info">About</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+		<div data-role="page" id="newsStream">
+			<div data-role="header" data-position="fixed">
+				<h1>News Stream</h1>
+			</div>
+			<div data-role="content">
+				<p>2013-03-14: Added a PS3 game to the library.</p>
+				<p>2013-03-10: Added a PC game the the library.</p>
+				<p>2013-02-28: Added a PSV game to the library.</p>
+				<p>2013-02-10: Added a PS3 game to the library.</p>
+				<p>2013-01-18: Added a Xbox 360 game to the library.</p>
+				<p>2013-01-03: Added a 3DS game to the library.</p>
+				<p>2012-12-25: Added a Wii game to the library.</p>
+				<p>2012-12-25: Added a Wii game to the library.</p>
+				<p>2012-12-25: Added a PSV game to the library.</p>
+			</div>
+			<div data-role="footer" data-position="fixed">
+				<div data-role="navbar">
+					<ul>
+						<li><a href="#index" data-icon="home">Home</a></li>
+						<li><a href="#newsStream" data-icon="bars">News Steam</a></li>
+						<li><a href="#about" data-icon="info">About</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>	
 
-	</div>
+
 
 	<!-- JavaScript under here -->
 	<script src="http://code.jquery.com/jquery-1.8.2.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.0/jquery.mobile-1.3.0.min.js"></script></body>
 	<script src="js/json.js" type="text/javascript"></script>
-	<script src="js/main.js" type="text/javascript"></script>
+	
 </body>
 </html>
